# zedis

./: .gitignore  Cargo.toml  README.md  history.txt  index.md  install.sh  zedis.rb
docs/: README.md  bak.md  cli.md  clients.md  commands.md  concepts.md  gui.md  install.md  misc.md
docs/_layouts/: default.html
src/: main.rs
