[package]
name = "zedis"
version = "0.1.102"
authors = ["drbh <david.richard.holtz@gmail.com>"]
edition = "2018"

repository = "https://github.com/drbh/zedis"
description = "A little brokerless persisted lockfree datastore. 7 commands, super simple"
license = "Apache-2.0"

[dependencies]
sled = "0.28.0"
zmq = "0.9"
serde_derive = "1.0.101"
colored = "1.8"
rustyline = "5.0.3"

actix-web = "1.0.0"

bytes = "0.4"
futures = "0.1"
env_logger = "*"

serde = "1.0"
serde_json = "1.0"

json = "*"

web-view = "0.4.5"

sodiumoxide = "0.2.4"